# meshcore-stats

./: .dockerignore  .envrc.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  TODO.md  docker-bake.hcl  docker-compose.dev.yml  docker-compose.development.yml  docker-compose.yml  front-end-skill-prompt.md  meshcore.conf.example  pyproject.toml  pytest-duration-report.md  release-please-config.json  renovate.json  requirements.txt
.claude/: settings.local.json
.claude/agents/: frontend-expert.md  python-code-reviewer.md  test-engineer.md
.github/workflows/: docker-publish.yml  nightly.yml  pr.yml  release-please.yml  release.yml  test.yml
docker/: nginx.conf  ofelia.ini
docs/: battery-voltage-sources.md  firmware-responses.md  repeater-winter-solar-analysis.md
redesign/: assets  chart_colors.py  day.html  month.html  week.html  year.html
redesign/companion/: day.html  month.html  week.html  year.html
redesign/reports/: index.html  monthly.html  yearly.html
scripts/: backfill_rrd.py  collect_companion.py  collect_repeater.py  db_maintenance.sh  generate_snapshots.py  migrate_json_to_db.py  phase1_collect_companion.py  phase1_collect_repeater.py  phase2_render_charts.py  phase2_rrd_init.py  phase2_rrd_update_companion.py  phase2_rrd_update_repeater.py  phase3_render_site.py  phase4_render_reports.py  render_charts.py  render_reports.py  render_site.py  rsync_output.sh  sync_data_from_live.sh
src/meshmon/: __init__.py  battery.py  charts.py  db.py  env.py  extract.py  formatters.py  html.py  jsondump.py  log.py  meshcore_client.py  metrics.py  reports.py  retry.py  rrd.py  snapshot.py  snapshot_config.py  telemetry.py
test_review/: tests.md
tests/: __init__.py  conftest.py
tests/charts/: __init__.py  conftest.py  test_chart_io.py  test_chart_render.py  test_render_all_charts.py  test_statistics.py  test_timeseries.py  test_transforms.py
tests/client/: __init__.py  (+5 more)
(+74 files in other folders)
